force-app/main/default/objects/Contact/fields/nd_Lottery_Always_Review__c.field-meta.xml
<CustomField>
    <fullName>nd_Lottery_Always_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lottery Always Review</label>
    <type>Checkbox</type>
</CustomField>