force-app/main/default/objects/Contact/fields/nd_Lottery_Application_Comments__c.field-meta.xml
<CustomField>
    <fullName>nd_Lottery_Application_Comments__c</fullName>
    <label>Lottery Application Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>