force-app/main/default/objects/Contact/fields/nd_Lottery_Exclude_Future_Qualification__c.field-meta.xml
<CustomField>
    <fullName>nd_Lottery_Exclude_Future_Qualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lottery Exclude Future Qualification</label>
    <type>Checkbox</type>
</CustomField>