force-app/main/default/objects/Contact/fields/ND_Manually_Designated_Reason__c.field-meta.xml
<CustomField>
    <fullName>ND_Manually_Designated_Reason__c</fullName>
    <description>Explanation for manually designating a Constituent as VIP</description>
    <inlineHelpText>Explanation for manually designating a Constituent as VIP</inlineHelpText>
    <label>Manually Designated Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>