force-app/main/default/objects/Contact/fields/nd_Name_and_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Name_and_ID__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp;  MiddleName &amp; &quot; &quot; &amp;  LastName &amp; &quot; - &quot; &amp;  nd_Constituent_ID_and_Inst_Suffix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and ID</label>
    <type>Text</type>
</CustomField>