force-app/main/default/objects/Contact/fields/nd_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>nd_Net_Worth__c</fullName>
    <description>ND specific field to hold the value of the last Wealth Rating Net Worth field. The value is a formula field from the Organization (Household) object which is populated by a flow.</description>
    <formula>Account.nd_Net_Worth__c</formula>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>