force-app/main/default/objects/Contact/fields/nd_Order_of_St_Thomas_More_Giving__c.field-meta.xml
<CustomField>
    <fullName>nd_Order_of_St_Thomas_More_Giving__c</fullName>
    <description>Used for Membership Credit Logic (assigning Constituents to Giving Societies). Populated by Ruli/Batch Job.</description>
    <label>Order of St. Thomas More Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>