force-app/main/default/objects/Contact/fields/nd_Partner_Significant_Other__c.field-meta.xml
<CustomField>
    <fullName>nd_Partner_Significant_Other__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner/Significant Other</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Constituents (Partner/Significant Other)</relationshipLabel>
    <relationshipName>Constituents1</relationshipName>
    <type>Lookup</type>
</CustomField>