force-app/main/default/objects/Contact/fields/ND_Preferred_Degree_Year__c.field-meta.xml
<CustomField>
    <fullName>ND_Preferred_Degree_Year__c</fullName>
    <description>Preferred Degree Year for ND Alumni</description>
    <inlineHelpText>Preferred Degree Year for ND Alumni</inlineHelpText>
    <label>Preferred Degree Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>