force-app/main/default/objects/Contact/fields/ND_PRM_Agent__c.field-meta.xml
<CustomField>
    <fullName>ND_PRM_Agent__c</fullName>
    <formula>ucinn_ascendv2__PRM__r.FirstName &amp; &quot; &quot; &amp; ucinn_ascendv2__PRM__r.LastName</formula>
    <label>PRM Agent</label>
    <type>Text</type>
</CustomField>