force-app/main/default/objects/Contact/fields/nd_Rockne_Athletics_Fund_Recurring__c.field-meta.xml
<CustomField>
    <fullName>nd_Rockne_Athletics_Fund_Recurring__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used for Membership Credit Logic (assigning Constituents to Giving Societies). Populated by Ruli/Batch Job.</description>
    <label>Rockne Athletics Fund Recurring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>