force-app/main/default/objects/Contact/fields/nd_Salutation_Informal__c.field-meta.xml
<CustomField>
    <fullName>nd_Salutation_Informal__c</fullName>
    <label>Salutation (Informal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>