force-app/main/default/objects/Contact/fields/nd_Senior_Parent_Commencement__c.field-meta.xml
<CustomField>
    <fullName>nd_Senior_Parent_Commencement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Parent (Commencement)</label>
    <type>Checkbox</type>
</CustomField>