force-app/main/default/objects/Contact/fields/nd_SFMC_Sync__c.field-meta.xml
<CustomField>
    <fullName>nd_SFMC_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFMC Sync</label>
    <type>Checkbox</type>
</CustomField>