force-app/main/default/objects/Contact/fields/nd_SIG__c.field-meta.xml
<CustomField>
    <fullName>nd_SIG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to support the Significant Gift process.</description>
    <inlineHelpText>Indicator to support the Significant Gift process.</inlineHelpText>
    <label>SIG</label>
    <type>Checkbox</type>
</CustomField>