force-app/main/default/objects/Contact/fields/nd_Sophomore_Parent__c.field-meta.xml
<CustomField>
    <fullName>nd_Sophomore_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sophomore Parent</label>
    <type>Checkbox</type>
</CustomField>