force-app/main/default/objects/Contact/fields/nd_Suffix_Constituent_Types__c.field-meta.xml
<CustomField>
    <fullName>nd_Suffix_Constituent_Types__c</fullName>
    <label>Suffix Constituent Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>