force-app/main/default/objects/Contact/fields/nd_Suffix_ND_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>nd_Suffix_ND_Affiliations__c</fullName>
    <label>Suffix ND-Affiliations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>