force-app/main/default/objects/Contact/fields/nd_SV_Mobile_Phone_Valid__c.field-meta.xml
<CustomField>
    <fullName>nd_SV_Mobile_Phone_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created to sync with SignalVine. There is some validation done on the SignalVine side to confirm that a mobile phone is valid and this is passed back to crmND.</description>
    <inlineHelpText>Indicator from SignalVine regarding the Mobile phone.</inlineHelpText>
    <label>SV Mobile Phone Valid</label>
    <type>Checkbox</type>
</CustomField>