force-app/main/default/objects/Contact/fields/nd_Transformative_Gift_Prospect__c.field-meta.xml
<CustomField>
    <fullName>nd_Transformative_Gift_Prospect__c</fullName>
    <formula>Account.nd_Transformative_Gift_Prospect__c</formula>
    <label>Transformative Gift Prospect</label>
    <type>Checkbox</type>
</CustomField>