force-app/main/default/objects/Contact/fields/ND_VIP__c.field-meta.xml
<CustomField>
    <fullName>ND_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a Constituent that meets one or more of the following criteria.
1) Has an active ND Affiliation = Campaign Cabinet, Advisory Council, Advisory Board
2) &gt;$1M Lifetime Giving
3) Manually designated</description>
    <inlineHelpText>Indicates a Constituent that meets one or more of the following criteria.
1) Has an active ND Affiliation = Campaign Cabinet, Advisory Council, Advisory Board
2) &gt;$1M Lifetime Giving
3) Manually designated</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>