force-app/main/default/objects/Contact/fields/ND_VIP_Reason__c.field-meta.xml
<CustomField>
    <fullName>ND_VIP_Reason__c</fullName>
    <description>Captures one or more of the reasons that a Constituent may be flagged as VIP</description>
    <label>VIP Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Donor Level</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Involvement</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Manually Designated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>