force-app/main/default/objects/Contact/fields/ND_Wealth_Rating__c.field-meta.xml
<CustomField>
    <fullName>ND_Wealth_Rating__c</fullName>
    <description>Field to display a prioritized wealth rating value from the same field on the organization object.</description>
    <formula>Account.ND_Wealth_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ND Wealth Rating</label>
    <type>Text</type>
</CustomField>