force-app/main/default/objects/Contact/fields/NetID__c.field-meta.xml
<CustomField>
    <fullName>NetID__c</fullName>
    <externalId>true</externalId>
    <label>NetID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>