force-app/main/default/objects/Contact/fields/Onward_ND__c.field-meta.xml
<CustomField>
    <fullName>Onward_ND__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt-in/Opt-out control for texts from Signal Vine on this Program.</description>
    <inlineHelpText>Opt-in/Opt-out control for texts from Signal Vine on this Program.</inlineHelpText>
    <label>Onward ND</label>
    <type>Checkbox</type>
</CustomField>