force-app/main/default/objects/Contact/fields/Phone_Number_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Formatting__c</fullName>
    <defaultValue>&quot;Enter phone numbers without formatting i.e. xxxxxxxxxx&quot;</defaultValue>
    <description>Custom field added because the standard phone fields do not allow for adding help text.  This field will be placed on the page layout close to the phone number entry fields.</description>
    <label>Phone Number Formatting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>