force-app/main/default/objects/Contact/fields/Phone_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified_Date__c</fullName>
    <label>Phone Verified Date</label>
    <type>Date</type>
</CustomField>