force-app/main/default/objects/Contact/fields/Preferred_Email_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email_Verified_Date__c</fullName>
    <label>Preferred Email Verified Date</label>
    <type>Date</type>
</CustomField>