force-app/main/default/objects/Contact/fields/Religious_Order__c.field-meta.xml
<CustomField>
    <fullName>Religious_Order__c</fullName>
    <label>Religious Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRO</fullName>
                <label>Brother</label>
            </value>
            <value>
                <fullName>CSCBRO</fullName>
                <label>C.S.C. Brother</label>
            </value>
            <value>
                <fullName>CSCPRT</fullName>
                <label>C.S.C. Priest</label>
            </value>
            <value>
                <fullName>CSCSEM</fullName>
                <label>C.S.C. Seminarian</label>
            </value>
            <value>
                <fullName>CSCSIS</fullName>
                <label>C.S.C. Sister</label>
            </value>
            <value>
                <fullName>DEACON</fullName>
                <label>Deacon</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>PRIEST</fullName>
                <label>Priest</label>
            </value>
            <value>
                <fullName>PROMIN</fullName>
                <label>Protestant Minister</label>
            </value>
            <value>
                <fullName>RABBI</fullName>
                <label>Rabbi</label>
            </value>
            <value>
                <fullName>SEMINA</fullName>
                <label>Seminarian</label>
            </value>
            <value>
                <fullName>SISTER</fullName>
                <label>Sister</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>