force-app/main/default/objects/Contact/fields/Retiree_Matching_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Retiree_Matching_Ratio__c</fullName>
    <formula>IF(Current_Employer__r.ucinn_ascendv2__Retiree_Matching_Ratio__c &gt; 0, TEXT(Current_Employer__r.ucinn_ascendv2__Retiree_Matching_Ratio__c), &quot;None&quot;)</formula>
    <label>Retiree Matching Ratio</label>
    <type>Text</type>
</CustomField>