force-app/main/default/objects/Contact/fields/Spouse_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Donor_ID__c</fullName>
    <description>Formula field that concatenates spouse name and donor ID.  Workaround for showing spouse name and donor ID in the gift processing donor information display panel.</description>
    <formula>If(!ISBLANK(ucinn_ascendv2__Preferred_Spouse__c),
ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Full_Name_Formula__c &amp;&quot; (&quot;&amp; ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Donor_ID__c &amp;&quot;)&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse</label>
    <type>Text</type>
</CustomField>