force-app/main/default/objects/Contact/fields/Spouse_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Spouse_ID_Formula__c</fullName>
    <formula>Spouse_Donor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse ID Formula</label>
    <type>Text</type>
</CustomField>