force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Action_Center_Panel_Displayed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Action_Center_Panel_Displayed__c</fullName>
    <label>Action Center Panel Displayed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Did You Know</fullName>
            </value>
            <value>
                <fullName>Digits</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Thank You</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Donation Reminder</fullName>
            </value>
            <value>
                <fullName>Pledge Payment Reminder</fullName>
            </value>
            <value>
                <fullName>Abnormal Gift Decrease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>