force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Age_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Age_Formula__c</fullName>
    <formula>IF( ISBLANK(TEXT( ucinn_ascendv2__Birth_Year__c ))
, NULL
, IF( AND( NOT(ucinn_ascendv2__Is_Deceased__c)
           ,ISBLANK(TEXT(ucinn_ascendv2__Deceased_Month__c))
           ,ISBLANK(TEXT(ucinn_ascendv2__Deceased_Day__c))
           ,ISBLANK(TEXT(ucinn_ascendv2__Deceased_Year__c))
          )
     , FLOOR( (TODAY() - Birthdate) / 365.2425 )
     , IF ( ISBLANK(TEXT(ucinn_ascendv2__Deceased_Year__c))
           ,NULL
           ,IF ( AND( DAY(ucinn_ascendv2__Deceased_Date__c) == DAY(Birthdate)
                     ,MONTH(ucinn_ascendv2__Deceased_Date__c) == MONTH(Birthdate)
                    )
                ,(ucinn_ascendv2__Deceased_Date__c - Birthdate) / 365.2425
                ,FLOOR( (ucinn_ascendv2__Deceased_Date__c - Birthdate) / 365.2425 )
               )
          )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>