force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Appeal_of_Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Appeal_of_Largest_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal of Largest Gift</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Constituents (Appeal of Largest Gift)</relationshipLabel>
    <relationshipName>Constituents_Appeal_of_Largest_Gift</relationshipName>
    <type>Lookup</type>
</CustomField>