force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Appeal_of_Most_Recent_Gift_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Appeal_of_Most_Recent_Gift_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal of Most Recent Gift</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Constituents</relationshipLabel>
    <relationshipName>Constituents_Appeal_of_Most_Recent_Gift</relationshipName>
    <type>Lookup</type>
</CustomField>