force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Type__c</fullName>
    <label>Constituent Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AL</fullName>
                <label>Alumni</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Alumni Widow</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Confirmed Admitted Student</label>
            </value>
            <value>
                <fullName>EM</fullName>
                <label>Employee</label>
            </value>
            <value>
                <fullName>EF</fullName>
                <label>Former Employee</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>Friend</label>
            </value>
            <value>
                <fullName>SW</fullName>
                <label>Non-Returning Student</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Parent</label>
            </value>
            <value>
                <fullName>PN</fullName>
                <label>Parent of Non-Returning Student</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>Related Child</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Related Entity</label>
            </value>
            <value>
                <fullName>ER</fullName>
                <label>Retired Employee</label>
            </value>
            <value>
                <fullName>ST</fullName>
                <label>Student</label>
            </value>
            <value>
                <fullName>UI</fullName>
                <label>Unknown Individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>