force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Date_Marked_Deceased__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Date_Marked_Deceased__c</fullName>
    <description>Date when the Constituent was updated to Status &quot;Deceased&quot;</description>
    <label>Date Marked Deceased</label>
    <type>Date</type>
</CustomField>